--- a/IsoBridge.Web/Views/AdminAudit/Index.cshtml
+++ b/IsoBridge.Web/Views/AdminAudit/Index.cshtml
@@ -50,6 +50,7 @@
                     <a href="/swagger" class="px-4 py-2 text-gray-500 hover:text-gray-900">Swagger</a>
                     <a href="/admin/audit" class="px-4 py-2 bg-black text-white rounded-lg">Audit</a>
                     <a href="/admin/iso-preview" class="px-4 py-2 text-gray-500 hover:text-gray-900">ISO Preview</a>
+                    <a href="/admin/forward" class="px-4 py-2 text-gray-500 hover:text-gray-900">Forward</a>
                 </div>
             </div>
             <div class="flex items-center gap-4">
